--- a/app/src/main/res/layout/chat_msg_row.xml
+++ b/app/src/main/res/layout/chat_msg_row.xml
@@ -12,7 +12,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:layout_gravity="start"
-            android:textColor="@color/green"
+            android:textColor="@color/white"
             android:gravity="center_vertical"
             android:textSize="15sp"
             android:textStyle="bold"
